[fix compile error] "rt-thread/src/clock.d:15: *** multiple target patterns. Stop."

--- a/TC264/.cproject
+++ b/TC264/.cproject
@@ -1121,13 +1121,13 @@
         		
         <configuration configurationName="Debug">
             			
-            <resource resourceType="PROJECT" workspacePath="/rt-thread_for_tc264"/>
+            <resource resourceType="PROJECT" workspacePath="/TC264"/>
             		
         </configuration>
         		
         <configuration configurationName="Release">
             			
-            <resource resourceType="PROJECT" workspacePath="/rt-thread_for_tc264"/>
+            <resource resourceType="PROJECT" workspacePath="/TC264"/>
             		
         </configuration>
         	
