--- a/TC264/.project
+++ b/TC264/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>rt-thread_for_tc264</name>
+	<name>TC264</name>
 	<comment></comment>
 	<projects>
 	</projects>
