--- a/TC377/.project
+++ b/TC377/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>rt-thread_for_tc377</name>
+	<name>TC377</name>
 	<comment></comment>
 	<projects>
 	</projects>
