--- a/TC364/Libraries/infineon_libraries/Configurations/SConscript
+++ b/TC364/Libraries/infineon_libraries/Configurations/SConscript
@@ -6,6 +6,7 @@ from building import *
 # The set of source files associated with this SConscript file.
 src  = Split("""
 Ifx_Cfg_Ssw.c
+Ifx_Cfg_SswBmhd.c
 """)
 
 # get current directory
