--- a/TC264/Libraries/BaseSw/iLLD/TC26B/Tricore/SConscript
+++ b/TC264/Libraries/BaseSw/iLLD/TC26B/Tricore/SConscript
@@ -141,10 +141,12 @@ _PinMap/IfxVadc_PinMap.c
 # get current directory
 cwd = GetCurrentDir()
 path =  [cwd]
+path += [cwd + '/Asclin']
 path += [cwd + '/Asclin/Asc']
 path += [cwd + '/Asclin/Lin']
 path += [cwd + '/Asclin/Spi']
 path += [cwd + '/Asclin/Std']
+path += [cwd + '/Ccu6']
 path += [cwd + '/Ccu6/Icu']
 path += [cwd + '/Ccu6/PwmBc']
 path += [cwd + '/Ccu6/PwmHl']
@@ -152,71 +154,102 @@ path += [cwd + '/Ccu6/Std']
 path += [cwd + '/Ccu6/Timer']
 path += [cwd + '/Ccu6/TimerWithTrigger']
 path += [cwd + '/Ccu6/TPwm']
+path += [cwd + '/Cif']
 path += [cwd + '/Cif/Cam']
 path += [cwd + '/Cif/Std']
+path += [cwd + '/Cpu']
 path += [cwd + '/Cpu/CStart']
 path += [cwd + '/Cpu/Irq']
 path += [cwd + '/Cpu/Std']
 path += [cwd + '/Cpu/Trap']
+path += [cwd + '/Dma']
 path += [cwd + '/Dma/Dma']
 path += [cwd + '/Dma/Std']
+path += [cwd + '/Dsadc']
 path += [cwd + '/Dsadc/Dsadc']
 path += [cwd + '/Dsadc/Rdc']
 path += [cwd + '/Dsadc/Std']
+path += [cwd + '/Dts']
 path += [cwd + '/Dts/Dts']
 path += [cwd + '/Dts/Std']
+path += [cwd + '/Emem']
 path += [cwd + '/Emem/Std']
+path += [cwd + '/Eray']
 path += [cwd + '/Eray/Eray']
 path += [cwd + '/Eray/Std']
+path += [cwd + '/Eth']
 path += [cwd + '/Eth/Phy_Pef7071']
 path += [cwd + '/Eth/Std']
+path += [cwd + '/Fce']
 path += [cwd + '/Fce/Crc']
 path += [cwd + '/Fce/Std']
+path += [cwd + '/Fft']
 path += [cwd + '/Fft/Fft']
 path += [cwd + '/Fft/Std']
+path += [cwd + '/Flash']
 path += [cwd + '/Flash/Std']
+path += [cwd + '/Gpt12']
 path += [cwd + '/Gpt12/IncrEnc']
 path += [cwd + '/Gpt12/Std']
+path += [cwd + '/Gtm']
+path += [cwd + '/Gtm/Atom']
 path += [cwd + '/Gtm/Atom/Pwm']
 path += [cwd + '/Gtm/Atom/PwmHl']
 path += [cwd + '/Gtm/Atom/Timer']
 path += [cwd + '/Gtm/Std']
+path += [cwd + '/Gtm/Tim']
 path += [cwd + '/Gtm/Tim/In']
+path += [cwd + '/Gtm/Tom']
 path += [cwd + '/Gtm/Tom/Pwm']
 path += [cwd + '/Gtm/Tom/PwmHl']
 path += [cwd + '/Gtm/Tom/Timer']
 path += [cwd + '/Gtm/Trig']
+path += [cwd + '/Hssl']
 path += [cwd + '/Hssl/Hssl']
 path += [cwd + '/Hssl/Std']
+path += [cwd + '/I2c']
 path += [cwd + '/I2c/I2c']
 path += [cwd + '/I2c/Std']
+path += [cwd + '/Iom']
 path += [cwd + '/Iom/Driver']
 path += [cwd + '/Iom/Std']
+path += [cwd + '/Msc']
 path += [cwd + '/Msc/Msc']
 path += [cwd + '/Msc/Std']
 path += [cwd + '/Mtu/Std']
+path += [cwd + '/Multican']
 path += [cwd + '/Multican/Can']
 path += [cwd + '/Multican/Std']
+path += [cwd + '/Port']
 path += [cwd + '/Port/Io']
 path += [cwd + '/Port/Std']
+path += [cwd + '/Psi5']
 path += [cwd + '/Psi5/Psi5']
 path += [cwd + '/Psi5/Std']
 path += [cwd + '/Psi5s/Psi5s']
 path += [cwd + '/Psi5s/Std']
+path += [cwd + '/Qspi']
 path += [cwd + '/Qspi/SpiMaster']
 path += [cwd + '/Qspi/SpiSlave']
 path += [cwd + '/Qspi/Std']
+path += [cwd + '/Scu']
 path += [cwd + '/Scu/Std']
+path += [cwd + '/Sent']
 path += [cwd + '/Sent/Sent']
 path += [cwd + '/Sent/Std']
+path += [cwd + '/Smu']
 path += [cwd + '/Smu/Std']
+path += [cwd + '/Src']
 path += [cwd + '/Src/Std']
+path += [cwd + '/Stm']
 path += [cwd + '/Stm/Std']
 path += [cwd + '/Stm/Timer']
+path += [cwd + '/Vadc']
 path += [cwd + '/Vadc/Adc']
 path += [cwd + '/Vadc/Std']
 path += [cwd + '/_Build']
 path += [cwd + '/_Impl']
+path += [cwd + '/_Lib']
 path += [cwd + '/_Lib/DataHandling']
 path += [cwd + '/_Lib/InternalMux']
 path += [cwd + '/_PinMap']
