--- a/TC264/Libraries/seekfree_libraries/common/SConscript
+++ b/TC264/Libraries/seekfree_libraries/common/SConscript
@@ -10,6 +10,7 @@ SEEKFREE_PRINTF.c
 zf_assert.c
 """)
 
-group = DefineGroup('Common', src, depend = [''], CPPPATH = cwd)
+path = [cwd]
+group = DefineGroup('Common', src, depend = [''], CPPPATH = path)
 
 Return('group')
