--- a/TC264/Libraries/BaseSw/SConscript
+++ b/TC264/Libraries/BaseSw/SConscript
@@ -6,8 +6,11 @@ objs = []
 cwd  = GetCurrentDir()
 list = os.listdir(cwd)
 
+path = [cwd]
+group = DefineGroup('Basesw', src = [' '], depend = [''], CPPPATH = path)
+
 for item in list:
     if os.path.isfile(os.path.join(cwd, item, 'SConscript')):
-        objs = objs + SConscript(os.path.join(item, 'SConscript'))
+        group = group + SConscript(os.path.join(item, 'SConscript'))
 
-Return('objs')
+Return('group')
