--- a/TC264/Libraries/seekfree_libraries/SConscript
+++ b/TC264/Libraries/seekfree_libraries/SConscript
@@ -18,8 +18,8 @@ zf_stm_systick.c
 zf_uart.c
 zf_vadc.c
 """)
-
-group = DefineGroup('Libraries', src, depend = [''], CPPPATH = cwd)
+path = [cwd]
+group = DefineGroup('Libraries', src, depend = [''], CPPPATH = path)
 
 # traverse folder
 list = os.listdir(cwd)
