--- a/TC364/Libraries/seekfree_peripheral/SConscript
+++ b/TC364/Libraries/seekfree_peripheral/SConscript
@@ -27,6 +27,7 @@ SEEKFREE_VIRSCO.c
 SEEKFREE_WIRELESS.c
 """)
 
-group = DefineGroup('Peripheral', src, depend = [''], CPPPATH = cwd)
+path = [cwd]
+group = DefineGroup('Peripheral', src, depend = [''], CPPPATH = path)
 
 Return('group')
